Update scroll behaviour and coming to the about us section

--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -20,7 +20,7 @@
         <!-- Menu Items -->
         <ul class="menu-item">
             <li><a href="#how-it-work">Home</a></li>
-            <li><a href="#Features">About</a></li>
+            <li><a href="#AboutUs">About</a></li>
             <li><a href="#customer-feedback">Contact</a></li>
             <li><a href="#FAQS">Blog</a></li>
             <li><a href="#FAQS">Careers</a></li>
@@ -49,7 +49,7 @@
     </div>
   </div>
   <!-- About Us grid -->
-  <div class="about-us-grid">
+  <div class="about-us-grid" id="AboutUs">
     <!-- title and description-->
     <div class="about-us-grid-row-title">
       <h2>Why choose Easybank?</h2>
