--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -140,7 +140,13 @@
       </div>
     </div>
   </div>
-
+  <!-- 
+    .footer
+      .brand-links-column
+      .homepage-links-column
+      .outer-pages-column
+      .call-to-act-column
+  -->
   
 
   About Us
