--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -140,12 +140,29 @@
       </div>
     </div>
   </div>
+  <div class="footer">
+    <div class="brand-links-column"></div>
+  </div>
   <!-- 
     .footer
       .brand-links-column
+        img
+        .social-logos
+          img.fb
+          img.youtube
+          img.pinterest
+          img.instagram
       .homepage-links-column
+        a
+        a
+        a
       .outer-pages-column
+        a
+        a
+        a
       .call-to-act-column
+        a.call-to-btn
+        p
   -->
   
 
