--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -121,11 +121,12 @@
       <div class="blog-card">
         <img src="./images/image-plane.jpg" alt="Resturant Image">
       <!-- Blog description -->
-      <div class="blog-description">
-        <p class="author-name">By Wilson Hutton</p>
-        <h3>Take your Easybank card wherever you go</h3>
-        <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+        <div class="blog-description">
+          <p class="author-name">By Wilson Hutton</p>
+          <h3>Take your Easybank card wherever you go</h3>
+          <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
           while you’re abroad. We’ll even show you …</p>
+        </div>
       </div>
     </div>
     <!-- Card 4-->
@@ -140,8 +141,18 @@
       </div>
     </div>
   </div>
+  <!-- Footer div-->
   <div class="footer">
-    <div class="brand-links-column"></div>
+    <div class="brand-links-column">
+      <img src="./images/logo.svg" alt="">
+      <div class="social-logos">
+        <img src="./images/icon-facebook.svg" alt="facebok icon">
+        <img src="./images/icon-youtube.svg" alt="youtube icon">
+        <img src="./images/icon-twitter.svg" alt="twitter icon">
+        <img src="./images/icon-pinterest.svg" alt="pinterest icon">
+        <img src="./images/icon-instagram.svg" alt="instagram icon">
+      </div>
+    </div>
   </div>
   <!-- 
     .footer
