--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -113,7 +113,7 @@
         <div class="blog-description">
           <p class="author-name">By Wilson Hutton</p>
           <h3>Treat yourself without worrying about money</h3>
-          <p >Our simple budgeting feature allows you to separate out your spending and set 
+          <p>Our simple budgeting feature allows you to separate out your spending and set 
           re  alistic limits each month. That means you …</p>
         </div>
       </div>
@@ -128,7 +128,6 @@
           while you’re abroad. We’ll even show you …</p>
         </div>
       </div>
-    </div>
     <!-- Card 4-->
     <div class="blog-card">
         <img src="./images/image-confetti.jpg" alt="Resturant Image">
@@ -143,6 +142,7 @@
   </div>
   <!-- Footer div-->
   <div class="footer">
+    <!-- Brand image & social links column-->
     <div class="brand-links-column">
       <img src="./images/logo.svg" alt="">
       <div class="social-logos">
@@ -152,6 +152,23 @@
         <img src="./images/icon-pinterest.svg" alt="pinterest icon">
         <img src="./images/icon-instagram.svg" alt="instagram icon">
       </div>
+    </div>
+    <!-- homepage-links-column div -->
+    <div class="homepage-links-column">
+      <a href="">About Us</a>
+      <a href="">Contact</a>
+      <a href="">Blog</a>
+    </div>
+    <!-- outer-pages-column div -->
+    <div class="outer-pages-column">
+      <a href="">Careers</a>
+      <a href="">Support</a>
+      <a href="">Privacy Policy</a>
+    </div>
+    <!-- call-to-act-column div -->
+    <div class="call-to-act-column">
+      <a href="" class="call-to-act-btn">Request Invite</a>
+      <p>© Easybank. All Rights Reserved</p>
     </div>
   </div>
   <!-- 
@@ -175,18 +192,5 @@
         a.call-to-btn
         p
   -->
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
-
 </body>
 </html>
