--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -128,15 +128,16 @@
           while you’re abroad. We’ll even show you …</p>
         </div>
       </div>
-    <!-- Card 4-->
-    <div class="blog-card">
-        <img src="./images/image-confetti.jpg" alt="Resturant Image">
-      <!-- Blog description -->
-      <div class="blog-description">
-        <p class="author-name">By Claire Robinson</p>
-      <h3>Our invite-only Beta accounts are now liv e!</h3>
-      <p>After a lot of hard work by the whole tea  m, we’re excited to launch our closed beta. 
-        It’s easy to request an invite through the s  ite ...</p>
+      <!-- Card 4-->
+      <div class="blog-card">
+          <img src="./images/image-confetti.jpg" alt="Resturant Image">
+        <!-- Blog description -->
+        <div class="blog-description">
+          <p class="author-name">By Claire Robinson</p>
+        <h3>Our invite-only Beta accounts are now liv e!</h3>
+        <p>After a lot of hard work by the whole tea  m, we’re excited to launch our closed beta. 
+          It’s easy to request an invite through the s  ite ...</p>
+        </div>
       </div>
     </div>
   </div>
