--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -173,6 +173,7 @@
     </div>
   </div>
   <!-- 
+    Changing the color of logo svg in the footer
     .footer
       .brand-links-column
         img
