update index.html and index.css
Done with the raw faqs

--- a/Week4/A3-html-and-css/bootstrap-challenge/index.html
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.html
@@ -186,44 +186,96 @@
           </div>
         </div>
     </div>
-    
   </div>
 
-  Frequently Asked Questions
+  <!-- faqs div -->
+  <div class="faq-div  pt-5 my-5 mb-10 text-center  ">
+    <h2 class="display-6  mb-4">Frequently Asked Questions</h2>
+    <!-- faq body div-->
+    <div class="faq-body-div col-lg-6 mx-auto">
+      <!-- Description -->
+      <p class=" mb-5 faq-description mx-5">Here are some of our FAQs. If you have any other questions you’d like 
+        answered please feel free to email us.</p>
+      <!-- Accordion div-->
+       <div  class="container accordion " id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  What is Bookmark?
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+                  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  How can I request a new browser?
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+                  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+                  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+                  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  Is there a mobile app?
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+                  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+                  sollicitudin ex et ultricies bibendum.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  What about other Chromium browsers?
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
+                  vitae neque eget nisl gravida pellentesque non ut velit.</div>
+              </div>
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary btn-sm px-3 py-2 me-md-2 mt-4">More Info</button>
+    </div>
+  </div>
   
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
+  
+  
 
   <!-- Question 1 -->
-  What is Bookmark?
+  
 
   <!-- Answer 1 -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+  
 
   <!-- Question 2 -->
-  How can I request a new browser?
+  
 
   <!-- Answer 2 -->
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+  
 
   <!-- Question 3 -->
-  Is there a mobile app?
+  
 
   <!-- Answer 3 -->
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
+  
 
   <!-- Question 4 -->
-  What about other Chromium browsers?
+  
 
   <!-- Answer 4 -->
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
+  
 
   More Info
 
