--- a/Week4/A3-html-and-css/bootstrap-challenge/index.html
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.html
@@ -198,6 +198,7 @@
         answered please feel free to email us.</p>
       <!-- Accordion div-->
        <div  class="container accordion " id="accordionExample">
+            <!-- Accordion # 1 -->
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -209,6 +210,7 @@
                   justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.</div>
               </div>
             </div>
+            <!-- Accordion # 2 -->
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -222,6 +224,7 @@
                   Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</div>
               </div>
             </div>
+            <!-- Accordion # 3 -->
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
@@ -234,6 +237,7 @@
                   sollicitudin ex et ultricies bibendum.</div>
               </div>
             </div>
+            <!-- Accordion # 4 -->
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
