--- a/Week4/A3-html-and-css/bootstrap-challenge/index.html
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.html
@@ -253,39 +253,23 @@
         <button type="button" class="btn btn-primary btn-sm px-3 py-2 me-md-2 mt-4">More Info</button>
     </div>
   </div>
-  
-  
-  
+  <!-- contact div-->
+  <div class="contact-div container-fluid text-center d-flex flex-column justify-content-center align-items-center p-5">
+    <p class="text-uppercase">35,000+ already joined</p>
+    <h2 class="col-lg-4 ">Stay up-to-date with what we’re doing</h2>
+    <div class="row mt-4 gap-lg-2 gap-3">
+      <div class="col">
+        <input class="py-1" type="text"  >
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-danger px-4 py-1">LOGIN</button> </div>
+    </div>
+  </div>  
 
-  <!-- Question 1 -->
-  
 
-  <!-- Answer 1 -->
-  
-
-  <!-- Question 2 -->
-  
-
-  <!-- Answer 2 -->
-  
-
-  <!-- Question 3 -->
   
 
-  <!-- Answer 3 -->
   
-
-  <!-- Question 4 -->
-  
-
-  <!-- Answer 4 -->
-  
-
-  More Info
-
-  35,000+ already joined
-
-  Stay up-to-date with what we’re doing
 
   Contact Us
 
