--- a/Week4/A3-html-and-css/bootstrap-challenge/index.html
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.html
@@ -256,13 +256,13 @@
   <!-- contact div-->
   <div class="contact-div container-fluid text-center d-flex flex-column justify-content-center align-items-center p-5">
     <p class="text-uppercase">35,000+ already joined</p>
-    <h2 class="col-lg-4 ">Stay up-to-date with what we’re doing</h2>
+    <h2 class="col-lg-4  ">Stay up-to-date with what we’re doing</h2>
     <div class="row mt-4 gap-lg-2 gap-3">
       <div class="col">
-        <input class="py-1" type="text"  >
+        <input class="py-2" type="text"  >
       </div>
       <div class="col">
-        <button type="button" class="btn btn-danger px-4 py-1">LOGIN</button> </div>
+        <button type="button" class="btn  btn-danger px-4 py-2">Contact Us</button> </div>
     </div>
   </div>  
 
