--- a/Week9/Vanilla Javascript Project/index.html
+++ b/Week9/Vanilla Javascript Project/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font Popins  Link-->
+    <!-- FOnt Aewsome CDN-->
+    <!-- -->
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- header -->
+        <!-- h1 -->
+
+    <!-- Form -->
+        <!-- input -->
+        <!-- button -->
+    <!-- div -->
+        <!-- ul -->
+    <!-- app.js script-->
 </body>
 </html>
