--- a/Week9/Vanilla Javascript Project/index.html
+++ b/Week9/Vanilla Javascript Project/index.html
@@ -5,19 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Font Popins  Link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
     <!-- FOnt Aewsome CDN-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- -->
-    <title>Document</title>
+    <title>TO DO List</title>
 </head>
 <body>
     <!-- header -->
+    <header>
+        <h1>Ahmed's Todo List</h1>
+    </header>
         <!-- h1 -->
 
     <!-- Form -->
+    <form>
         <!-- input -->
         <!-- button -->
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit">
+            <i class="fas fa-plus-square"></i>
+        </button>
+    </form>
+        
     <!-- div -->
+    <div class="todo-container">
         <!-- ul -->
-    <!-- app.js script-->
+        <ul class="todo-list"></ul>
+    </div>
+        <!-- app.js script-->
+    <script src="./app.js"></script>
 </body>
 </html>
