--- a/Week9/Vanilla Javascript Project/index.html
+++ b/Week9/Vanilla Javascript Project/index.html
@@ -11,6 +11,7 @@
     <!-- FOnt Aewsome CDN-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- -->
+    <link rel="stylesheet" href="./style.css">
     <title>TO DO List</title>
 </head>
 <body>
