--- a/Week9/Vanilla Javascript Project/index.html
+++ b/Week9/Vanilla Javascript Project/index.html
@@ -29,6 +29,14 @@
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
+        <!-- select -->
+        <div class="select">
+            <select name="todos" class="filter-todo" id="">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
         
     <!-- div -->
