define basic structure

--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -9,8 +9,12 @@
     <script src="script.js"></script>
     <!-- Css stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font aewsome cdn -->
 </head>
 <body>
-    
+    <!-- .div.notes 
+            .div.tools
+            textarea
+    -->
 </body>
 </html>
