--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -10,11 +10,32 @@
     <!-- Css stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Font aewsome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Add marked cdn -->
 </head>
 <body>
-    <!-- .div.notes 
-            .div.tools
-            textarea
+    <!-- 
+       <div class="notes">
+        <div class="tools">
+            <button>
+                i.fas fa-edit
+            </button>
+            <button>
+                i.fas fa-trash-alt
+            </button>
+        </div>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    </div>
+
+    .main
+        textarea
+
     -->
+    <div class="notes">
+        <div class="tools">
+            <button></button>
+        </div>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    </div>
 </body>
 </html>
