Done with implementing the structured code

--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -12,6 +12,7 @@
     <!-- Font aewsome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Add marked cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.2/marked.min.js" integrity="sha512-hzyXu3u+VDu/7vpPjRKFp9w33Idx7pWWNazPm+aCMRu26yZXFCby1gn1JxevVv3LDwnSbyKrvLo3JNdi4Qx1ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <!-- 
@@ -33,9 +34,17 @@
     -->
     <div class="notes">
         <div class="tools">
-            <button></button>
+            <button>
+                <i class="fas fa-edit"></i>
+            </button>
+            <button>
+                <i class="fas fa-trash-alt"></i>
+            </button>
         </div>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea ></textarea>
+    </div>
+    <div class="main">
+        <textarea ></textarea>
     </div>
 </body>
 </html>
