--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -34,17 +34,17 @@
     -->
     <div class="notes">
         <div class="tools">
-            <button>
+            <button class="edit">
                 <i class="fas fa-edit"></i>
             </button>
-            <button>
+            <button class="delete">
                 <i class="fas fa-trash-alt"></i>
             </button>
         </div>
         <textarea ></textarea>
     </div>
     <div class="main">
-        <textarea ></textarea>
     </div>
+    <textarea ></textarea>
 </body>
 </html>
