--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -32,19 +32,8 @@
         textarea
 
     -->
-    <div class="notes">
-        <div class="tools">
-            <button class="edit">
-                <i class="fas fa-edit"></i>
-            </button>
-            <button class="delete">
-                <i class="fas fa-trash-alt"></i>
-            </button>
-        </div>
-        <textarea ></textarea>
-    </div>
-    <div class="main">
-    </div>
-    <textarea ></textarea>
+    <button class="add" id="add">
+        <i class="fas fa-plus"></i> Add note
+    </button>
 </body>
 </html>
