--- a/Week10/NotesApp Javascript/index.html
+++ b/Week10/NotesApp Javascript/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes App</title>
     <!-- Script Link -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <!-- Css stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Font aewsome cdn -->
